--- a/WorldRender/WorldRender.csproj
+++ b/WorldRender/WorldRender.csproj
@@ -41,6 +41,9 @@
     <Reference Include="AssimpNet">
       <HintPath>..\packages\AssimpNet.3.3.1\lib\net20\AssimpNet.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="SlimDX, Version=4.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
       <Private>True</Private>
       <HintPath>..\packages\SlimDX.4.0.13.44\lib\NET40\SlimDX.dll</HintPath>
@@ -61,6 +64,7 @@
     <Compile Include="Graphics\ConstantBuffer.cs" />
     <Compile Include="Graphics\Device.cs" />
     <Compile Include="Graphics\IndexBuffer.cs" />
+    <Compile Include="Graphics\Mesh.cs" />
     <Compile Include="Graphics\PixelShader.cs" />
     <Compile Include="Graphics\RasterizerState.cs" />
     <Compile Include="Graphics\RenderCommand.cs" />
@@ -81,7 +85,18 @@
     <Compile Include="Input\MouseState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Cache.cs" />
+    <Compile Include="Resources\Loader.cs" />
+    <Compile Include="Resources\Loaders\MeshLoader.cs" />
+    <Compile Include="Resources\Loaders\PixelShaderLoader.cs" />
+    <Compile Include="Resources\Loaders\VertexShaderLoader.cs" />
     <Compile Include="Timing\Timer.cs" />
+    <Content Include="shader.ps">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="shader.vs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
