--- a/WorldRender/packages.config
+++ b/WorldRender/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AssimpNet" version="3.3.1" targetFramework="net40-Client" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40-Client" />
   <package id="SlimDX" version="4.0.13.44" targetFramework="net40-Client" />
 </packages>
