--- a/WorldRender/WorldRender.csproj
+++ b/WorldRender/WorldRender.csproj
@@ -60,9 +60,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Components\Component.cs" />
+    <Compile Include="Entities\Components\RenderComponent.cs" />
+    <Compile Include="Entities\Components\TransformComponent.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\EntityCollection.cs" />
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Graphics\ConstantBuffer.cs" />
     <Compile Include="Graphics\Device.cs" />
+    <Compile Include="Graphics\Effect.cs" />
     <Compile Include="Graphics\IndexBuffer.cs" />
     <Compile Include="Graphics\Mesh.cs" />
     <Compile Include="Graphics\MeshGroup.cs" />
@@ -70,6 +76,7 @@
     <Compile Include="Graphics\RasterizerState.cs" />
     <Compile Include="Graphics\RenderCommand.cs" />
     <Compile Include="Graphics\RenderTarget.cs" />
+    <Compile Include="Graphics\TextRenderer.cs" />
     <Compile Include="Graphics\Texture.cs" />
     <Compile Include="Graphics\UniqueId.cs" />
     <Compile Include="Graphics\VertexBuffer.cs" />
@@ -91,6 +98,7 @@
     <Compile Include="Resources\Loader.cs" />
     <Compile Include="Resources\Loaders\MeshLoader.cs" />
     <Compile Include="Resources\Loaders\PixelShaderLoader.cs" />
+    <Compile Include="Resources\Loaders\RasterizerStateLoader.cs" />
     <Compile Include="Resources\Loaders\TextureLoader.cs" />
     <Compile Include="Resources\Loaders\VertexShaderLoader.cs" />
     <Compile Include="Timing\Timer.cs" />
@@ -125,7 +133,11 @@
     <Content Include="simplecube.DAE">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="texteffect.fx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AssimpNet.3.3.1\build\AssimpNet.targets" Condition="Exists('..\packages\AssimpNet.3.3.1\build\AssimpNet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
