cleanup and setting up shader compilation system

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 WorldRender/bin/Debug/WorldRender.vshost.exe
 WorldRender/bin/Debug/WorldRender.vshost.exe.manifest
 *.cache
+*.suo
+WorldRender/bin/Debug/Assimp32.dll
+*.dll
+WorldRender/bin/Debug/AssimpNet.xml
+WorldRender/bin/Debug/Newtonsoft.Json.xml
+WorldRender/bin/Debug/simplecube.DAE
+*.exe
+WorldRender/bin/Debug/uv_map_reference.jpg
+*.pdb
+WorldRender/obj/x86/Debug/WorldRender.csproj.FileListAbsolute.txt
+WorldRender/obj/x86/Debug/WorldRender.Properties.Resources.resources
+WorldRender/bin/Debug/shader.fx
+WorldRender/bin/Debug/keybindings.json
+WorldRender/bin/Debug/texteffect.fx
+WorldRender.suo
