--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ WorldRender/bin/Debug/shader.fx
 WorldRender/bin/Debug/keybindings.json
 WorldRender/bin/Debug/texteffect.fx
 WorldRender.suo
+WorldRender.suo
