--- a/WorldRender/WorldRender.csproj
+++ b/WorldRender/WorldRender.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Graphics\ConstantBuffer.cs" />
     <Compile Include="Graphics\Device.cs" />
     <Compile Include="Graphics\IndexBuffer.cs" />
+    <Compile Include="Graphics\Materials\Material.cs" />
+    <Compile Include="Graphics\Materials\MaterialDescriptor.cs" />
+    <Compile Include="Graphics\Materials\MaterialGroup.cs" />
     <Compile Include="Graphics\Mesh.cs" />
     <Compile Include="Graphics\MeshGroup.cs" />
     <Compile Include="Graphics\RasterizerState.cs" />
@@ -102,6 +105,7 @@
     <Compile Include="Resources\Cache.cs" />
     <Compile Include="Resources\Loaders\BaseLoader.cs" />
     <Compile Include="Resources\Loaders\ConstantBufferLoader.cs" />
+    <Compile Include="Resources\Loaders\MaterialLoader.cs" />
     <Compile Include="Resources\Loaders\MeshLoader.cs" />
     <Compile Include="Resources\Loaders\PixelShaderLoader.cs" />
     <Compile Include="Resources\Loaders\RasterizerStateLoader.cs" />
