--- a/WorldRender/WorldRender.csproj
+++ b/WorldRender/WorldRender.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Graphics\RenderTarget.cs" />
     <Compile Include="Graphics\Shaders\CompiledShader.cs" />
     <Compile Include="Graphics\Shaders\PixelShader.cs" />
+    <Compile Include="Graphics\Shaders\VertexConstantBuffer.cs" />
     <Compile Include="Graphics\Shaders\VertexShader.cs" />
     <Compile Include="Graphics\TextRenderer.cs" />
     <Compile Include="Graphics\Texture2d.cs" />
@@ -104,11 +105,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Cache.cs" />
     <Compile Include="Resources\Loaders\BaseLoader.cs" />
-    <Compile Include="Resources\Loaders\ConstantBufferLoader.cs" />
     <Compile Include="Resources\Loaders\MaterialLoader.cs" />
     <Compile Include="Resources\Loaders\MeshLoader.cs" />
     <Compile Include="Resources\Loaders\PixelShaderLoader.cs" />
     <Compile Include="Resources\Loaders\RasterizerStateLoader.cs" />
+    <Compile Include="Resources\Loaders\RenderTargetLoader.cs" />
     <Compile Include="Resources\Loaders\TextureLoader.cs" />
     <Compile Include="Resources\Loaders\VertexShaderLoader.cs" />
     <Compile Include="Timing\Timer.cs" />
@@ -125,6 +126,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Content Include="keybindings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="materials.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
